Added paragraph for bad branch name

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>Pagina Principale</h1>
   <p>Paragrafo</p>
   <p>New Paragraph</p>
+  <p>Paragraph for bad branch name</p>
 </body>
 </html>
