--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <p>New Paragraph</p>
   <p>Paragraph for bad branch name</p>
   <p>A new paragraph on master</p>
+  <p>Now I'm on the corrected branch name</p>
 </body>
 </html>
